bk_ida/gccida/c0/subreg_regno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno/src/rtlanal.c:3521:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subreg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno/src/rtlanal.c:3521:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subreg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno/src/rtlanal.c:3523:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno/src/rtlanal.c:3523:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)) 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/subreg_regno/src/obj/rtlanal.o] Error 1
